name:                hbiography
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/maksar/hbiography#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hbiography-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -O2
  build-depends:       base
                     , parsec >= 3
                     , MissingH >= 1.4.0.1
                     , either-unwrap
                     , split
                     , cassava
                     , deepseq
                     , parallel
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/maksar/hbiography
